project/vote/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote
spec:
  ingressClassName: nginx
  rules:
    - host: vote
      http:
        paths:
          - backend:
              service:
                name: vote
                port:
                  number: 80
            path: /
            pathType: Prefix
